# matrixshapes

./: CMakeLists.txt  README.md
src/: generator.cpp  matrix.h  solver.cpp
